<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where R U</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Where R U</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_checkin">CheckinActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_read_message">ReadMessageActivity</string>
    <string name="status_button">show/hide location</string>
    <string name="checkin">Checkin</string>
    <string name="contact3">Some Guy</string>
    <string name="contact1">Miranda Kerr</string>
    <string name="contact2">Scarlet Johanson</string>
    <string name="yourname">Your Name</string>
    <string name="password">Save password</string>
    <string name="rememberme">Remember me</string>
    <string name="login">Log in</string>
    <string name="p">Password</string>
    <string name="action_show_loc">Show your location</string>
    <string name="title">Where R U</string>
    <string name="ms">message</string>
    <string name="ct">contact</string>
    <string name="setting">setting</string>
    <string name="settingAction">Setting</string>
    <string name="messageAction">Message</string>
    <string name="account">Account</string>
    <string name="read">Read</string>
    <string name="sender">Trick Rock Star</string>
    <string name="locinfo">Location: to be implemented</string>
    <string name="text">Hey yo, guess what is on my mind</string>
    <string name="setting">Setting</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="sound">Sound</string>
    <string name="viberate">Viberate</string>
    <string name="wlan">WLAN</string>
    <string name="gps">GPS</string>
    <string name="blue">#33B5E5</string>
    <string name="action_search">search</string>
    <string name="checkin_action">check-in</string>
    <string name="action_contact">Contact</string>
    <string name="title_activity_checkin_message">Checkin</string>
    <string name="title_activity_new_group">Create New Group</string>
    <string name="title_activity_new_contact">Create New Contact</string>
    <string name="new_group_name">New Group Name: </string>
    <string name="hint_new_group_name">Enter group name</string>
    <string name="add_group">Add Group</string>
    <string name="hint_new_contact">Enter contact name</string>
    <string name="hint_new_contact_group">Enter contact group</string>
    <string name="add_contact">Add Contact</string>
    <string name="action_search">Search</string>
    <string name="action_hide_loc">Hide your location</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="create_new_group">Create new group</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="send">Send</string>
    <string name="hint_account_name">Account Name</string>
    <string name="groupview">Groupview</string>
    <string name="title_activity_group">Group</string>
    <string name="action_refresh">Refresh</string>
    <string name="contactview">CONTACTVIEW</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_group_message">Checkin</string>
    <string name="action_share">Share your location</string>
    <string name="action_message">Fetch your messages</string>

</resources>
