<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:whereru="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_message"
          android:icon="@drawable/ic_launcher_n_message_action"
          android:title="@string/messageAction"
          whereru:showAsAction="always" />
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_launcher_n_setting_action"
          android:title="@string/action_settings"
          whereru:showAsAction="always" />
    <item android:id="@+id/action_show_or_hide_loc"
          android:icon="@drawable/ic_launcher_newloc"
          android:title="@string/action_show_hide_loc"
          whereru:showAsAction="always" />
    <item android:id="@+id/action_check_in"
          android:icon="@drawable/ic_launcher_n_checkin_action"
          android:title="@string/checkin_action"
          whereru:showAsAction="always" />
    <item android:id="@+id/action_contact"
          android:icon="@drawable/ic_launcher_n_contact_action"
          android:title="@string/action_contact"
          whereru:showAsAction="always" />

</menu>
