<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MessageActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ms"
        android:textSize="45dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/editText1"
        android:src="@drawable/ic_launcher_ta" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginRight="38dp"
        android:text="@string/read"
        android:onClick="detail" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/msgcontent" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginBottom="38dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/sender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp" />

</RelativeLayout>